getting synth engine in here

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
- idf_component_register(SRCS  "usbmidi.c" "synth_main.c" 
-                    INCLUDE_DIRS "."
+ idf_component_register(SRCS  "sine-ping/Parameters.c" "sine-ping/Plugin.c" "sine-ping/Stream.c" "sine-ping/Voice.c" "sine-ping.c" "usbmidi.c"  "plugin-host.c" "synth_main.c"  
+                    INCLUDE_DIRS "." "clap/include"
                     PRIV_REQUIRES usb esp_driver_gpio esp_driver_i2s
                     ) 
 
