--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
- idf_component_register(SRCS  "sine-ping/Parameters.c" "sine-ping/Plugin.c" "sine-ping/Stream.c" "sine-ping/Voice.c" "sine-ping.c" "usbmidi.c"  "plugin-host.c" "synth_main.c" "midi-events.c"  
+ idf_component_register(SRCS "audio-task.c" "sine-ping/Parameters.c" "sine-ping/Plugin.c" "sine-ping/Stream.c" "sine-ping/Voice.c" "sine-ping.c" "usb-midi.c"  "plugin-host.c" "synth_main.c" "midi-events.c"  
                     INCLUDE_DIRS "." "clap/include"
                     PRIV_REQUIRES usb esp_driver_gpio esp_driver_i2s
                     ) 
