--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sine-ping"]
 	path = sine-ping
 	url = git@github.com:khades/sine-ping.git
+[submodule "u8g2"]
+	path = u8g2
+	url = https://github.com/olikraus/u8g2
